<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Classic Power Menu</string>
    <string name="strapline">Power Menu Replacement</string>
    <string name="accessibility_service_description">Required Accessibility Service to intercept long press power events. This service requests the minimum permissions required, and does not track or control your screen other than to show Classic Power Menu.</string>
    <string name="xposed_description">Intercepts the Power Menu to show Classic Power Menu, without needing the Accessibility Service.</string>
    <string name="root_check_checking_root">Checking for Root…</string>
    <string name="root_check_checking_root_desc">Please grant permission if asked</string>
    <string name="root_check_failed_bottom_sheet_title">No Root</string>
    <string name="root_check_failed_bottom_sheet_content">Classic Power Menu requires root access, please root your device to continue</string>
    <string name="root_check_failed_bottom_sheet_close">Close</string>
    <string name="setup_landing_get_started">Get Started</string>
    <string name="setup_accessibility_title">Enable Accessibility Service</string>
    <string name="setup_accessibility_content">Classic Power Menu requires an Accessibility Service to react to Power Button events, please enable it to continue. Alternatively, if you have Xposed, you can enable the Xposed module and reboot. If you are using the Xposed module and still see this message, <a href="cpm://accessibiilityskip">tap here to skip.</a></string>
    <string name="setup_accessibility_button">Enable Accessibility Service</string>
    <string name="setup_wallet_switch">Enable Quick Access Wallet</string>
    <string name="setup_wallet_content">The Quick Access Wallet gives you access to your cards and passes, from your default payment app. You can switch between NFC enabled payment cards or access compatible passes, right from the power menu.\n\nAdditionally, Classic Power Menu supports Loyalty Cards, enable this later in the settings.</string>
    <string name="setup_wallet_button">Next</string>
    <string name="setup_controls_switch">Enable Device Controls</string>
    <string name="setup_controls_content">Device Controls allow you to control Smart Home devices via compatible apps, right from the power menu.\n\nAdditional apps are required to support this feature, such as Google Home.</string>
    <string name="setup_controls_button">Next</string>
    <string name="setup_complete_title">Setup Complete</string>
    <string name="setup_complete_content">One last thing: The first time you attempt to launch Classic Power Menu after installing or a reboot, the normal power menu may appear in front of Classic Power Menu, or Classic Power Menu may not launch at all. <b>This is normal.</b> Simply close the normal power menu and long press power again, and this time Classic Power Menu will launch as normal. This is due to Android System restrictions.\n\nEnjoy the app!</string>
    <string name="setup_complete_button">Finish</string>
    <string name="power_menu_button_power_off">Power off</string>
    <string name="power_menu_button_reboot">Restart</string>
    <string name="power_menu_button_reboot_recovery">Reboot Recovery</string>
    <string name="power_menu_button_reboot_bootloader">Reboot Bootloader</string>
    <string name="power_menu_button_restart_systemui">Restart SystemUI</string>
    <string name="power_menu_button_emergency">Emergency</string>
    <string name="power_menu_button_lockdown">Lockdown</string>
    <string name="power_menu_button_screenshot">Screenshot</string>
    <string name="power_menu_button_fastbootd">Fastbootd</string>
    <string name="power_menu_button_download">Download</string>
    <string name="wallet_loyalty_instructions">• Tap to show</string>
    <string name="content_creator_mode_warning">Content Creator Mode enabled</string>
    <string name="reboot_safemode_title">Reboot to safe mode</string>
    <string name="reboot_safemode_confirm">Do you want to reboot into safe mode?
         This will disable all third party applications you have installed.
         They will be restored when you reboot again.</string>
    <string name="wallet_code_open_in_pay">Open in Google Wallet</string>
    <string name="settings_main_switch">Enable Classic Power Menu</string>
    <string name="settings_header_configuration">Configuration</string>
    <string name="settings_power_options">Power Options</string>
    <string name="settings_power_options_desc">Configure and re-arrange the Power Options buttons</string>
    <string name="settings_quick_access_wallet">Quick Access Wallet</string>
    <string name="settings_quick_access_wallet_desc">Change settings for how the Wallet shows, including showing loyalty cards</string>
    <string name="settings_controls">Device Controls</string>
    <string name="settings_controls_desc">Change settings for how Device Controls show, including using while locked</string>
    <string name="settings_developer_options">Developer Options</string>
    <string name="settings_theme_configuration">Theme</string>
    <string name="settings_monet">Material You Colors</string>
    <string name="settings_monet_desc">Use Material You / Monet colors in the power menu</string>
    <string name="settings_monet_color_picker">Wallpaper Color</string>
    <string name="settings_monet_color_picker_desc">Select the color to use, extracted from your wallpaper</string>
    <string name="settings_solid_color">Use Solid Color</string>
    <string name="settings_solid_color_desc">Use a solid Material You background rather than a dimmed-blur background</string>
    <string name="settings_power_options_rearrange">Edit Power Options</string>
    <string name="settings_power_options_rearrange_desc">Add, remove and re-arrange the Power Options</string>
    <string name="settings_power_options_hide_when_locked">Hide power-related options when locked</string>
    <string name="settings_power_options_hide_when_locked_desc">Hides Power Off, Reboot, Reboot Recovery and Reboot Bootloader options while locked.\n<b>Important: This is not intended as a theft-deterrent, a thief can still hold down power for 10 seconds or remove the SIM card!</b></string>
    <string name="settings_power_options_open_collapsed">Open collapsed</string>
    <string name="settings_power_options_open_collapsed_desc">When Classic Power Menu opens, start with the Power Options panel collapsed, if there is more than one row of items</string>
    <string name="settings_power_options_drag_to_rearrange">Tap &amp; hold to drag to add, remove or re-arrange</string>
    <string name="settings_power_options_cannot_remove">You must have at least one Power Option in the Power Menu</string>
    <string name="settings_power_options_rearrange_no_items">No more buttons to add</string>
    <string name="settings_power_options_allow_rotate">Allow Rotation</string>
    <string name="settings_power_options_allow_rotate_desc">Allows the screen to be orientated in either portrait or landscape</string>
    <string name="settings_power_options_allow_rotate_full">Allow Full Rotation</string>
    <string name="settings_power_options_allow_rotate_full_desc">Allows full rotation, including reverse portrait (upside down)</string>
    <string name="settings_quick_access_wallet_switch">Show Quick Access Wallet</string>
    <string name="settings_quick_access_wallet_header_payment">Payment Cards</string>
    <string name="settings_quick_access_wallet_loyalty_cards">Loyalty Cards</string>
    <string name="settings_quick_access_wallet_change_settings_in_pay">Change settings in Google Wallet</string>
    <string name="settings_quick_access_wallet_change_settings_in_pay_desc">Change settings such as Payment Card order, default card and behaviour</string>
    <string name="settings_quick_access_wallet_access_while_locked_desc">Show the Loyalty Card preview while locked. If disabled, you will be prompted to unlock first before the preview or Google Wallet opens</string>
    <string name="settings_quick_access_wallet_hide_card_number_when_locked">Blur Payment Card Number when locked</string>
    <string name="settings_quick_access_wallet_auto_switch_service">Auto switch default payment method</string>
    <string name="settings_quick_access_wallet_auto_switch_service_desc">When CPM is opened auto switch the default payment method to the selected service. <b>Note: This is only needed if your wallet app is not the "Default Contactless Payment"</b></string>
    <string name="settings_quick_access_wallet_auto_switch_service_select">Select service for auto switch</string>
    <string name="settings_quick_access_wallet_auto_switch_service_loading">Loading NFC emulation services…</string>
    <string name="settings_quick_access_wallet_auto_switch_service_error_no_services">No NFC emulation services found</string>
    <string name="settings_quick_access_wallet_show_loyalty_cards">Show Loyalty Cards</string>
    <string name="settings_quick_access_wallet_show_loyalty_cards_desc">Load and show your Loyalty Cards from Google Wallet in the Quick Access Wallet</string>
    <string name="settings_quick_access_wallet_manage">Manage Account &amp; Loyalty Cards</string>
    <string name="settings_quick_access_wallet_manage_desc">Login, re-order and show/hide Loyalty Cards in the Quick Access Wallet</string>
    <string name="settings_quick_access_wallet_manage_logout">Logout of account</string>
    <string name="settings_quick_access_wallet_manage_logout_desc">Delete stored Loyalty Cards data and current account</string>
    <string name="settings_quick_access_wallet_manage_sign_in">Sign in required</string>
    <string name="settings_quick_access_wallet_manage_sign_in_desc">To use Loyalty Cards you need to log into your Google Account using the regular account flow to use Google Wallet integration. This is required as the API is not accessible using the regular android account sign in.\n\n<b>Your Wallet data is kept encrypted on your device and never transmitted, nor is it included in backups, for your privacy and security.</b></string>
    <string name="settings_quick_access_wallet_show_preview">Show Loyalty Card Preview</string>
    <string name="settings_quick_access_wallet_show_preview_desc">Show a preview of the Loyalty Card to be scanned or viewed in store without opening Google Wallet</string>
    <string name="settings_quick_access_wallet_access_while_locked">Allow Loyalty Card access while locked</string>
    <string name="settings_quick_access_wallet_hide_card_number_when_locked_desc">Applies a blur to your Payment Card when the Quick Access Wallet is open and the device is locked. <b>Note: This may not work for all cards or Wallet providers.</b></string>
    <string name="settings_quick_access_wallet_loyalty_cards_not_supported">Loyalty Cards not Supported</string>
    <string name="settings_quick_access_wallet_loyalty_cards_not_supported_desc">Unfortunately, Loyalty Cards are currently only supported on the original Google Wallet app, not the unified "GPay" app. Install and set up Google Wallet to use Loyalty Cards in the Quick Access Wallet.</string>
    <string name="settings_device_controls_switch">Show Device Controls</string>
    <string name="settings_about_faq">Frequently Asked Questions</string>
    <string name="chip_donate">Donate</string>
    <string name="chip_twitter">Follow me on Twitter</string>
    <string name="chip_github">GitHub</string>
    <string name="chip_xda">XDA Thread</string>
    <string name="bottom_sheet_update_available_title">Update Available</string>
    <string name="bottom_sheet_update_available_positive">Download</string>
    <string name="bottom_sheet_update_available_negative">Close</string>
    <string name="bottom_sheet_update_available_neutral">View on GitHub</string>
</resources>