<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/setup_landing_logo"
            android:layout_width="@dimen/setup_image_size"
            android:layout_height="172dp"
            android:background="@drawable/background_logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:backgroundTint="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/setup_landing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.ClassicPowerMenu"
            app:layout_constraintBottom_toTopOf="@id/setup_landing_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setup_landing_logo" />

        <TextView
            android:id="@+id/setup_landing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/strapline"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.ClassicPowerMenu.Lighter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setup_landing_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_landing_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="@dimen/margin_16"
            android:minWidth="200dp"
            android:text="@string/setup_landing_get_started"
            android:textAllCaps="false"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/setup_landing_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>