<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <ImageView
            android:id="@+id/setup_accessibility_image"
            android:layout_width="@dimen/setup_image_size"
            android:layout_height="@dimen/setup_image_size"
            android:src="@drawable/avd_accessibility"
            app:layout_constraintBottom_toTopOf="@id/setup_accessibility_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/setup_accessibility_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/setup_accessibility_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.ClassicPowerMenu"
            app:layout_constraintBottom_toTopOf="@id/setup_accessibility_content"
            app:layout_constraintTop_toBottomOf="@id/setup_accessibility_image" />

        <TextView
            android:id="@+id/setup_accessibility_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/setup_accessibility_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.ClassicPowerMenu"
            app:layout_constraintBottom_toTopOf="@id/setup_accessibility_button"
            app:layout_constraintTop_toBottomOf="@id/setup_accessibility_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_accessibility_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:minWidth="300dp"
            android:text="@string/setup_accessibility_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>